--- a/ads.cabal
+++ b/ads.cabal
@@ -18,19 +18,20 @@ executable ads
   -- other-modules:       
   -- other-extensions:    
   build-depends:
-    base            >=4.6 && <4.7,
-    binary          >= 0.5,
-    binary-conduit  >= 1.2,
-    bytestring      >= 0.10,
-    conduit         >= 1.0,
-    configurator    >= 0.2,
+    base                >=4.6 && <4.7,
+    binary              >= 0.5,
+    binary-conduit      >= 1.2,
+    bytestring          >= 0.10,
+    conduit             >= 1.0,
+    configurator        >= 0.2,
     data-binary-ieee754 >= 0.4,
-    network         >= 2.4,
-    network-conduit >= 1.0,
-    stm             >= 2.4,
-    stm-chans       >= 3.0,
-    stm-conduit     >= 2.2,
-    transformers    >= 0.3
+    hslogger            >= 1.2,
+    network             >= 2.4,
+    network-conduit     >= 1.0,
+    stm                 >= 2.4,
+    stm-chans           >= 3.0,
+    stm-conduit         >= 2.2,
+    transformers        >= 0.3
                  
   hs-source-dirs:      src
   default-language:    Haskell2010
