--- a/ads.cabal
+++ b/ads.cabal
@@ -20,6 +20,7 @@ executable ads
   build-depends:
     base                >=4.6 && <4.7,
     base16-bytestring   >= 0.1,
+    base64-bytestring   >= 1.0,
     binary              >= 0.5,
     binary-conduit      >= 1.2,
     bytestring          >= 0.10,
@@ -31,6 +32,7 @@ executable ads
     stm                 >= 2.4,
     stm-chans           >= 3.0,
     stm-conduit         >= 2.2,
+    text                >= 0.11,
     transformers        >= 0.3
                  
   hs-source-dirs:      src
