--- a/ads.cabal
+++ b/ads.cabal
@@ -14,26 +14,28 @@ cabal-version:       >=1.10
 
 executable ads
   main-is:             Main.hs
-  ghc-options:         -Wall
+  ghc-options:         -Wall -threaded
   -- other-modules:       
   -- other-extensions:    
   build-depends:
-    base                >=4.6 && <4.7,
-    base16-bytestring   >= 0.1,
-    base64-bytestring   >= 1.0,
-    binary              >= 0.5,
-    binary-conduit      >= 1.2,
-    bytestring          >= 0.10,
-    conduit             >= 1.0,
-    configurator        >= 0.2,
-    hslogger            >= 1.2,
-    network             >= 2.4,
-    network-conduit     >= 1.0,
-    stm                 >= 2.4,
-    stm-chans           >= 3.0,
-    stm-conduit         >= 2.2,
-    text                >= 0.11,
-    transformers        >= 0.3
+    base                 >=4.6 && <4.7,
+    base16-bytestring    >= 0.1,
+    base64-bytestring    >= 1.0,
+    binary               >= 0.5,
+    binary-conduit       >= 1.2,
+    bytestring           >= 0.10,
+    conduit              >= 1.0,
+    configurator         >= 0.2,
+    hashable             >= 1.2,
+    hslogger             >= 1.2,
+    network              >= 2.4,
+    network-conduit      >= 1.0,
+    stm                  >= 2.4,
+    stm-chans            >= 3.0,
+    stm-conduit          >= 2.2,
+    text                 >= 0.11,
+    transformers         >= 0.3,
+    unordered-containers >= 0.2
                  
   hs-source-dirs:      src
   default-language:    Haskell2010
