--- a/ads.cabal
+++ b/ads.cabal
@@ -27,6 +27,7 @@ executable ads
     cipher-aes           >= 0.2,
     conduit              >= 1.0,
     configurator         >= 0.2,
+    filepath             >= 1.3,
     hashable             >= 1.2,
     hslogger             >= 1.2,
     network              >= 2.4,
