--- a/ads.cabal
+++ b/ads.cabal
@@ -14,7 +14,7 @@ cabal-version:       >=1.10
 
 executable ads
   main-is:             Main.hs
-  ghc-options:         -Wall -threaded
+  ghc-options:         -Wall -threaded -debug
   -- other-modules:       
   -- other-extensions:    
   build-depends:
@@ -27,6 +27,7 @@ executable ads
     cipher-aes           >= 0.2,
     conduit              >= 1.0,
     configurator         >= 0.2,
+    containers           >= 0.5,
     filepath             >= 1.3,
     hashable             >= 1.2,
     hslogger             >= 1.2,
