--- a/ads.cabal
+++ b/ads.cabal
@@ -39,7 +39,8 @@ executable ads
     stm-conduit          >= 2.2,
     text                 >= 0.11,
     transformers         >= 0.3,
-    unordered-containers >= 0.2
+    unordered-containers >= 0.2,
+    zlib                 >= 0.5
                  
   hs-source-dirs:      src
   default-language:    Haskell2010
