--- a/ads.cabal
+++ b/ads.cabal
@@ -31,6 +31,7 @@ executable ads
     filepath             >= 1.3,
     hashable             >= 1.2,
     hslogger             >= 1.2,
+    http-types           >= 0.8,
     network              >= 2.4,
     network-conduit      >= 1.0,
     SHA                  >= 1.6,
@@ -40,6 +41,8 @@ executable ads
     text                 >= 0.11,
     transformers         >= 0.3,
     unordered-containers >= 0.2,
+    wai                  >= 2.1,
+    warp                 >= 2.1,
     zlib                 >= 0.5
                  
   hs-source-dirs:      src
