--- a/ads.cabal
+++ b/ads.cabal
@@ -38,6 +38,7 @@ executable ads
     stm                  >= 2.4,
     stm-chans            >= 3.0,
     stm-conduit          >= 2.2,
+    tar                  >= 0.4,
     text                 >= 0.11,
     transformers         >= 0.3,
     unordered-containers >= 0.2,
