Prepared store for supporting multiple data types, but it still sucks.

--- a/ads.cabal
+++ b/ads.cabal
@@ -14,7 +14,8 @@ cabal-version:       >=1.10
 
 executable ads
   main-is:             Main.hs
-  ghc-options:         -Wall -threaded -debug
+  ghc-options:         -Wall -threaded
+  -- -debug
   -- other-modules:       
   -- other-extensions:    
   build-depends:
