--- a/ads.cabal
+++ b/ads.cabal
@@ -29,6 +29,7 @@ executable ads
     conduit              >= 1.0,
     configurator         >= 0.2,
     containers           >= 0.5,
+    crypto-pubkey        >= 0.2,
     filepath             >= 1.3,
     hashable             >= 1.2,
     hslogger             >= 1.2,
