--- a/ads.cabal
+++ b/ads.cabal
@@ -34,6 +34,7 @@ executable ads
     hashable             >= 1.2,
     hslogger             >= 1.2,
     http-types           >= 0.8,
+    lzma-conduit         >= 0.5,
     network              >= 2.4,
     network-conduit      >= 1.0,
     SHA                  >= 1.6,
