--- a/ads.cabal
+++ b/ads.cabal
@@ -1,22 +1,26 @@
 name:                ads
 version:             0.1.0.0
--- synopsis:            
--- description:         
+-- synopsis:
+-- description:
 license:             GPL-3
 license-file:        LICENSE
 author:              Matthias Treydte
 maintainer:          mt@waldheinz.de
--- copyright:           
+-- copyright:
 category:            Network
 build-type:          Simple
--- extra-source-files:  
+-- extra-source-files:
 cabal-version:       >=1.10
 
 executable ads
   main-is:             Main.hs
   ghc-options:         -Wall -threaded
   -- -debug
-  c-sources:           cbits/rijndael.c
+  c-sources:
+    cbits/rijndael.c,
+    cbits/lzma/lzma.c,
+    cbits/lzma/LzmaDec.c
+    
   cc-options:          -Wall -O2 -std=c99
   build-depends:
     base                 >=4.6 && <4.7,
@@ -34,7 +38,6 @@ executable ads
     hashable             >= 1.2,
     hslogger             >= 1.2,
     http-types           >= 0.8,
-    lzma-conduit         >= 0.5,
     network              >= 2.4,
     network-conduit      >= 1.0,
     SHA                  >= 1.6,
@@ -46,9 +49,10 @@ executable ads
     transformers         >= 0.3,
     unordered-containers >= 0.2,
     vector               >= 0.10,
+    void                 >= 0.6,
     wai                  >= 2.1,
     warp                 >= 2.1,
     zlib                 >= 0.5
-                 
+
   hs-source-dirs:      src
   default-language:    Haskell2010
