Cleaned up freenet datastore configuration.

--- a/configs/test.cfg
+++ b/configs/test.cfg
@@ -13,7 +13,11 @@ logging {
 }
 
 freenet {
-  datastore = "./fn-datastore"
+  datastore {
+    directory = "./fn-datastore"
+    chk-count = 1024
+    ssk-count = 1024
+  }
   
   companion {
     host = "127.0.0.1"
