Can configure fproxy through config file.

--- a/configs/test.cfg
+++ b/configs/test.cfg
@@ -19,6 +19,11 @@ freenet {
     ssk-count = 1024
   }
   
+  fproxy {
+    enabled = true
+    port = 8081
+  }
+  
   companion {
     host = "127.0.0.1"
     port = 4687
