--- a/ads.cabal
+++ b/ads.cabal
@@ -34,6 +34,7 @@ executable ads
     configurator         >= 0.2,
     containers           >= 0.5,
     crypto-pubkey        >= 0.2,
+    directory            >= 1.2,
     filepath             >= 1.3,
     hashable             >= 1.2,
     hslogger             >= 1.2,
