--- a/ads.cabal
+++ b/ads.cabal
@@ -48,6 +48,7 @@ executable ads
     tar                  >= 0.4,
     text                 >= 0.11,
     transformers         >= 0.3,
+    unix                 >= 2.6,
     unordered-containers >= 0.2,
     vector               >= 0.10,
     void                 >= 0.6,
