Gave a first shot at the peer connections/networking layer.
This includes a sweet abstraction which should allow to run simulations
without any TCP/IP at all, using simple message passing.

--- a/ads.cabal
+++ b/ads.cabal
@@ -24,6 +24,7 @@ executable ads
   cc-options:          -Wall -O2 -std=c99
   build-depends:
     base                 >=4.6 && <4.7,
+    aeson                >= 0.7,
     base16-bytestring    >= 0.1,
     base64-bytestring    >= 1.0,
     binary               >= 0.5,
