--- a/ads.cabal
+++ b/ads.cabal
@@ -36,6 +36,7 @@ executable ads
     conduit              >= 1.0,
     configurator         >= 0.2,
     containers           >= 0.5,
+    cprng-aes            >= 0.5,
     crypto-pubkey        >= 0.2,
     directory            >= 1.2,
     filepath             >= 1.3,
@@ -45,6 +46,7 @@ executable ads
     lrucache             >= 1.1,
     network              >= 2.4,
     network-conduit      >= 1.0,
+    random               >= 1.0,
     SHA                  >= 1.6,
     stm                  >= 2.4,
     stm-chans            >= 3.0,
