--- a/ads.cabal
+++ b/ads.cabal
@@ -14,7 +14,7 @@ cabal-version:       >=1.10
 
 executable ads
   main-is:             Main.hs
-  ghc-options:         -Wall -O2 -threaded
+  ghc-options:         -Wall -O2 -threaded -XDeriveDataTypeable
   -- -debug
   c-sources:
     cbits/rijndael.c,
@@ -53,7 +53,7 @@ executable ads
     stm                  >= 2.4,
     stm-chans            >= 3.0,
     stm-conduit          >= 2.2,
-    tar                  >= 0.4,
+--    tar                  >= 0.4,
     text                 >= 0.11,
     time                 >= 1.1,
     transformers         >= 0.3,
