--- a/ads.cabal
+++ b/ads.cabal
@@ -35,6 +35,7 @@ executable ads
     cipher-aes           >= 0.2,
     concurrent-extra     >= 0.7,
     conduit              >= 1.0,
+    conduit-extra        >= 1.1,
     configurator         >= 0.2,
     containers           >= 0.5,
     cprng-aes            >= 0.5,
@@ -47,7 +48,6 @@ executable ads
     http-types           >= 0.8,
     lrucache             >= 1.1,
     network              >= 2.4,
-    network-conduit      >= 1.0,
     random               >= 1.0,
     SHA                  >= 1.6,
     stm                  >= 2.4,
