--- a/ads.cabal
+++ b/ads.cabal
@@ -62,6 +62,7 @@ executable ads
     vector               >= 0.10,
     void                 >= 0.6,
     wai                  >= 2.1,
+    wai-extra            >= 2.1,
     warp                 >= 2.1,
     zip-archive          >= 0.2,
     zlib                 >= 0.5
