--- a/ads.cabal
+++ b/ads.cabal
@@ -15,14 +15,47 @@ cabal-version:       >=1.10
 data-files:
 	default-config
 
-executable ads
-  main-is:             Main.hs
+library
+  hs-source-dirs:      src/lib
+  default-language:    Haskell2010
   ghc-options:         -Wall -O2 -threaded
   c-sources:
     cbits/rijndael.c,
     cbits/lzma/lzma.c,
     cbits/lzma/LzmaDec.c
   cc-options:          -Wall -O2 -std=c99
+  exposed-modules:
+    Codec.Archive.Tar.Read,
+    Codec.Archive.Tar.Types,
+    Freenet,
+    Freenet.Archive,
+    Freenet.Base64,
+    Freenet.Chk,
+    Freenet.Companion,
+    Freenet.Compression
+    Freenet.Fetch,
+    Freenet.Fproxy,
+    Freenet.Insert,
+    Freenet.Metadata,
+    Freenet.Mime,
+    Freenet.Pcfb,
+    Freenet.Rijndael,
+    Freenet.SplitFile,
+    Freenet.Ssk,
+    Freenet.Store,
+    Freenet.Types,
+    Freenet.URI,
+    Logging,
+    Net,
+    Node,
+    Message,
+    Peers,
+    RestApi,
+    Statistics,
+    Time,
+    Types,
+    Utils
+
   build-depends:
     base                 ==4.*,
     aeson                >= 0.7,
@@ -49,6 +82,7 @@ executable ads
     http-types           >= 0.8,
     lrucache             >= 1.1,
     network              >= 2.4,
+    QuickCheck           >= 2.7,
     random               >= 1.0,
     SHA                  >= 1.6,
     stm                  >= 2.4,
@@ -69,5 +103,28 @@ executable ads
     zip-archive          >= 0.2,
     zlib                 >= 0.5
 
-  hs-source-dirs:      src
-  default-language:    Haskell2010
+executable ads
+  hs-source-dirs: src/main
+  default-language: Haskell2010
+  main-is: Main.hs
+  build-depends:
+    ads, aeson, base, bytestring, configurator, directory, filepath, network,
+    random, stm, unix, warp
+  
+test-suite test-ads
+  type:
+    exitcode-stdio-1.0
+  default-language:
+    Haskell2010
+  hs-source-dirs:
+    src/tests
+  main-is:
+    Main.hs
+  ghc-options:
+    -Wall -threaded
+  build-depends:
+    ads,
+    base                       >= 4.0,
+    test-framework             >= 0.8,
+    test-framework-quickcheck2 >= 0.3,
+    QuickCheck                 >= 2.0        
