--- a/ads.cabal
+++ b/ads.cabal
@@ -107,6 +107,7 @@ executable ads
   hs-source-dirs: src/main
   default-language: Haskell2010
   main-is: Main.hs
+  ghc-options: -Wall -threaded
   build-depends:
     ads, aeson, base, bytestring, configurator, directory, filepath, network,
     random, stm, unix, warp
