--- a/ads.cabal
+++ b/ads.cabal
@@ -20,9 +20,9 @@ library
   default-language:    Haskell2010
   ghc-options:         -Wall -O2 -threaded
   c-sources:
-    cbits/rijndael.c,
-    cbits/lzma/lzma.c,
-    cbits/lzma/LzmaDec.c
+    src/cbits/rijndael.c,
+    src/cbits/lzma/lzma.c,
+    src/cbits/lzma/LzmaDec.c
   cc-options:          -Wall -O2 -std=c99
   exposed-modules:
     Codec.Archive.Tar.Read,
