--- a/ads.cabal
+++ b/ads.cabal
@@ -126,6 +126,7 @@ test-suite test-ads
   build-depends:
     ads,
     base                       >= 4.0,
+    bytestring,
     test-framework             >= 0.8,
     test-framework-quickcheck2 >= 0.3,
     QuickCheck                 >= 2.0,
